Revision history for {{$dist->name}}

{{$NEXT}}

0.006     2013-08-16 05:32:38Z (Karen Etheridge)
          - proper fix for html image spacing (for real this time?)

0.005     2013-07-17 09:11:29 PDT-0700 (Karen Etheridge)
          - better fix for html image spacing
          - use new Acme::CPANAuthors::Factory
          - fixed prereqs, to allow operation on 5.8.x (build requires is not
            the same thing as develop requires)

0.004     2013-07-14 12:21:01 PDT-0700 (Karen Etheridge)
          - simplify creation of ad-hoc author object at build time
          - (hopefully) fix html cell padding issue on metacpan
          - use utf8 pragma, in case some names contain unicode characters
          - include a bit of background to why I wrote this
          - id=>name hash is also kept sorted

0.003     2013-07-05 18:04:20 PDT-0700 (Karen Etheridge)
          - rewrite code and HTML generation by using embedded templates in
            the .pm file and authors in __DATA__, and a custom Dist::Zilla
            plugin
          - updated list of PAUSE IDs, by re-scanning cpan-faces

0.002     2013-06-01 10:04:26 PDT-0700 (Karen Etheridge)
          - bump dependency on Acme::CPANAuthors to fix ::Search issue
            (RT#85779)

0.001     2013-05-29 20:18:53 PDT-0700 (Karen Etheridge)
          - Initial release.
